crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__basic_struct_and_field_access.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
10
1000
1010
