crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__comptime_transform_invalid_target.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-COMPTIME-001] Error: failed to execute comptime applies: unknown comptime function missing_transform
