crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__enum_ctor_invalid_arity.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

expected 1 payload argument for constructor OptionI32.Some, got 2
