crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__enum_match_payload_mismatch.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

match arm for non-payload variant None cannot bind a payload
