crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__enum_payload_variant_without_call.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-RESOLVE-001] Error: error[resolve:OAC-RESOLVE-001]: failed to resolve/type-check program: variant OptionI32.Some requires payload constructor call
